# ModelNumquamOblita

./: .gitattributes  .gitignore  ALGORITHM_PIPELINE.md  BIO_INSPIRED_MEMORY_SPEC.md  CLAUDE_PERSPECTIVE.md  CONTRIBUTING.md  DATA_MODEL_AND_STORAGE.md  DECISION_LOCK_2026-02-08.md  DISTRIBUTION.md  EVALUATION_GUARDRAILS.md  IMPLEMENTATION_BLUEPRINT.md  LICENSE  LLMS.md  MANIFEST.in  MEMORY_WRITE_GATE.md  README.md  RETRIEVAL_AND_SCORING.md  SECURITY.md  STM_LTM_POLICY_SPEC.md  V2_ARCHITECTURE_DECISIONS.md  V3_ACCEPTANCE_CRITERIA.md  V3_FAILURE_CASE_LIBRARY.md  V3_IDENTITY_CONTINUITY_UPGRADES.md  launch_setup_workspace.bat  launch_setup_workspace.ps1  launch_setup_workspace.sh  numquamoblita-execution-board-plan.md  pr_feedback_collector.py  pyproject.toml  setup_local.bat  setup_local.ps1  setup_local.sh
docs/: AGENT_INTEGRATION.md  API.md  AUTO_ORGANIZER_WIZARD_SPEC.md  BENCHMARKS.md  CARSINOS_INTEGRATION_REQUIREMENTS.md  CHANGELOG.md  COMPATIBILITY_AND_SUPPORT.md  CONFIGURATION.md  CONTEXT_PACKAGE_V2_EXTERNAL_RESPONDER_EVAL_SPEC.md  EPISODE_LAYER_AND_GATE_TASKLIST.md  EPISODIC_MEMORY_CARD_BUILD_SPEC.md  EVENT_MEMORY_EVENT_CUE_SPEC.md  EVIDENCE_MEMORY_EPISODE_GLOSSARY.md  FORWARD_PATH_MEMORY_ORCHESTRATION.md  FRONTEND_DESIGN_PHASE5_7_REMEDIATION_BRIEF_20260216.md  HEADLESS_CURATION_ROOM.md  IA_NO_INTEGRATION_PLAN.md  INDEX.md  LATENCY_TUNING_SCRATCHPAD.md  MAC_PACKAGING.md  MCP_INTEGRATION.md  MCP_PAYLOAD_DIET_NOTE_20260221.md  MCP_PAYLOAD_OPTIMIZATION_EXECUTION_SPEC.md  MCP_SERVER_SPEC.md  MEMORY_EXPLORATION_MODE_SPEC.md  MEMORY_FORMATION_GAMEPLAN.md  MEMORY_VISUALIZATION_SPEC.md  MNO_ANO_COMPATIBILITY_MATRIX.md  MNO_ANO_FULL_DISCONNECTION_BLOCKERBOARD.md  (+50 more)
(+326 files in other folders)
