[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelnumquamoblita"
version = "0.2.2"
description = "Standalone MNO personal memory runtime"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["defusedxml>=0.7.1", "tzdata>=2025.2", "tzlocal>=5.4,<6"]

[project.scripts]
mno-runtime = "tools.run_live_runtime:main"
mno-mcp = "tools.run_mcp_server:main"
mno-agent-mcp = "tools.run_claude_live_mcp:main"
mno-curate = "tools.run_headless_curation:main"
mno-curation-mcp = "tools.run_headless_curation_mcp:main"
mno-setup = "tools.setup_local:main"
mno-import = "tools.import_memories:main"
mno-report = "tools.report_issue:main"

[tool.setuptools.packages.find]
include = ["engine*", "tools*"]

[tool.setuptools.package-data]
"engine.runtime" = ["ui/*", "resources/*.md"]

[tool.setuptools.exclude-package-data]
"*" = [".DS_Store"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
